# nz-workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/commands/: netezza.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  validate-conventions.yml
docs/: learning-log.md.template  side-effects-catalog.md.template  technical-decisions.md.template
docs/adr/: 0001-python-stack.md  0002-chroma-local-vector-db.md  0003-bge-m3-embedder.md  0004-nz-mcp-client.md  README.md
docs/architecture/: knowledge-base.md  overview.md  prod-desa-rules.md  ren-lifecycle.md
docs/guides/: quickstart.md
docs/procedures/: _TEMPLATE.md
docs/standards/: git-workflow.md  maintainability.md  pr-audit.md  secrets.md  testing.md
ren/_TEMPLATE/: analysis.yaml  baseline_test.md  clarifications.md  conversation.md  decisions.md  manifest.yaml  source.md  summary.md  test_report.md
scripts/: check_branch_name.py  check_commit_msg.py  check_pr_body.py  check_pr_title.py  check_repo_hygiene.py
src/nz_workbench/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_config.py  mcp_server.py
src/nz_workbench/analyzer/: __init__.py  clarification.py  reference_finder.py  ren_parser.py
src/nz_workbench/docs_writer/: __init__.py  learning_log.py  procedure_doc.py  ren_folder.py
src/nz_workbench/kb/: __init__.py  chroma_store.py  chunker.py  embedder.py  explainer.py  indexer.py  metadata_store.py
src/nz_workbench/migrator/: __init__.py  manifest.py  orchestrator.py  rules.py  side_effects.py
src/nz_workbench/nz_mcp_client/: __init__.py  client.py
src/nz_workbench/tester/: __init__.py  baseline.py  comparison.py  differ.py
tests/: conftest.py
tests/integration/: test_bootstrap_smoke.py  test_kb_bootstrap_end_to_end.py
tests/unit/: test_cli_kb_commands.py  test_cli_stub_commands.py  test_config_defaults.py  test_embedder_edges.py  test_imports.py  test_kb_chroma_store.py  test_kb_chunker.py  test_kb_embedder.py  test_kb_indexer.py  test_kb_indexer_helpers.py  test_kb_indexer_issue3_regression.py  test_kb_metadata_store.py  test_logging_and_errors.py  test_nz_mcp_client.py
