[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "nz-workbench"
version = "0.0.1"
description = "AI-assisted workbench for IBM Netezza procedure maintenance — REN workflow, semantic search, PROD→DESA cloning with surgical edits"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Oscar Sirlopú", email = "oscar.sirlopu@gmail.com" },
]
keywords = [
    "mcp",
    "netezza",
    "ibm",
    "sql",
    "claude",
    "anthropic",
    "llm",
    "rag",
    "stored-procedure",
    "semantic-search",
    "chroma",
    "bge-m3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "typer>=0.15",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "chromadb==1.5.8",
    "sentence-transformers>=3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff==0.15.11",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/Oscarsp15/nz-workbench"
Repository = "https://github.com/Oscarsp15/nz-workbench"
Issues = "https://github.com/Oscarsp15/nz-workbench/issues"
Changelog = "https://github.com/Oscarsp15/nz-workbench/blob/main/CHANGELOG.md"

[project.scripts]
nz-workbench = "nz_workbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nz_workbench"]

# ----- ruff -----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "S",             # bandit
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "PL",            # pylint subset
    "TID",           # tidy imports
    "ARG",           # unused-arguments
    "PTH",           # pathlib
]
ignore = [
    "PLR0913",  # too many arguments — covered by maintainability.md threshold
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ARG", "PLC0415"]
"scripts/**" = ["S603", "S607", "PLR0911", "PLR2004", "T201"]

# ----- mypy -----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disable_error_code = ["explicit-any"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ----- pytest -----
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: fast, isolated, no Netezza",
    "integration: requires live Netezza + nz-mcp (NZ_WORKBENCH_RUN_INTEGRATION=1)",
    "contract: wire contract tests with nz-mcp or internal module boundaries",
    "adversarial: security-focused bypass attempts",
    "slow: > 5s",
]

# ----- coverage -----
[tool.coverage.run]
branch = true
source = ["src/nz_workbench"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85
show_missing = true
